fix to make the navbar visible on desktop

--- a/core/layout/sass/components/_navbar.scss
+++ b/core/layout/sass/components/_navbar.scss
@@ -148,5 +148,6 @@
   #navbar {
     left: 0;
     top: 0;
+    overflow: visible;
   }
 }
